--- a/pccc/contact.html
+++ b/pccc/contact.html
@@ -32,6 +32,9 @@
 
 </head>
 <body>
+<!--     <div id="left-sticky">
+        <img src="dist/images/sticky1.png" alt="">
+    </div> -->
     <div class="container">
         <div class=" row top-banner">
             <object width="100%" height="100%" align="middle">
@@ -147,109 +150,70 @@
         </div>
 
         <div class="row main-banner">
-            <img src="dist/images/news-and-events-banner.jpg" alt="">
+            <img src="dist/images/image-gallery-banner.jpg" alt="">
         </div>
 
-        <div class="row content-wrapper news-and-events-page">
+        <div class="row content-wrapper contact-page">
             <div class="col-sm-8 main-content">
                 <div class="row">
                     <div class="panel panel-default box">
                         <div class="panel-heading">
-                            <h3 class="panel-title box-header">Tin tức và sự kiện » Hoạt động xây dựng lực lượng</h3>
+                            <h3 class="panel-title box-header">Liên hệ</h3>
                         </div>
                         <div class="panel-body box-content">
-                            <div class="list-item">
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
+                            <h5 class="title">CẢNH SÁT PC & CC TỈNH BÌNH DƯƠNG</h5>
+                            <p>Địa chỉ : 664, Đại Lộ Bình Dương, Phường  Hiệp Thành, Thành Phố Thủ Dầu Một, Bình Dương</p>
+                            <p>Số điện thoại: 06503.819.799 – 0693.509.905</p>
+                            <p>Email: cspccc@binhduong.gov.vn</p>
 
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <ul class="pagination">
-                                  <li class="disabled"><a href="#">«</a></li>
-                                  <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                                  <li><a href="#">2</a></li>
-                                  <li><a href="#">3</a></li>
-                                  <li><a href="#">4</a></li>
-                                  <li><a href="#">5</a></li>
-                                  <li><a href="#">»</a></li>
-                                </ul>
+                            <h5 class="table-title">DANH SÁCH CÁC PHÒNG TRỰC THUỘC CẢNH SÁT PC&CC TỈNH BÌNH DƯƠNG</h5>
+                            <div class="">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-center">TÊN ĐƠN VỊ</th>
+                                            <th class="text-center">LIÊN HỆ</th>
+                                            <th class="text-center">ĐỊA BÀN QUẢN LÝ</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 1</td>
+                                            <td>664 Đại lộ Bình Dương, phường Hiệp Thành, thành phố Thủ Dầu Một (ĐT: 0693.509.971; Fax: 06503.844.688)</td>
+                                            <td>Thành phố Thủ Dầu Một</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 2</td>
+                                            <td>Đại lộ Độc lập, khu công nghiệp VSIP I, thị xã Thuận An (ĐT: 06503.765.755; Fax: 06503.765.556)</td>
+                                            <td>Thị xã Thuận An</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 3</td>
+                                            <td>Đường T, khu phố Nhị Đồng 2, phường Dĩ An, thị xã Dĩ An (ĐT: 06503.796.991; Fax: 06503.796.991)</td>
+                                            <td>Thị xã Dĩ An</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 4</td>
+                                            <td>Đường D1, khu công nghiệp Mỹ Phước, thị trấn Mỹ Phước, thị xã Bến Cát (ĐT: 06503.557.514; Fax: 06503.557.518)</td>
+                                            <td>Thị xã Bến Cát; Huyện Dầu Tiếng</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 5</td>
+                                            <td>Đường D4, khu công nghiệp Nam Tân Uyên, phường Khánh Bình, thị xã Tân Uyên (ĐT: 06503.653.764; Fax: 06503.653.763)</td>
+                                            <td>Thị xã Tân Uyên; Huyện Phú Giáo, Huyện Bắc Tân Uyên</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Cảnh sát PC&CC Số 6</td>
+                                            <td>Quốc lộ 13, khu công nghiệp Bàu Bàng, xã Lai Uyên, huyện Bàu Bàng (ĐT: 06503.516.779; Fax: 06503.516.778)</td>
+                                            <td>Huyện Bàu Bàng</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Phòng Hướng dẫn chỉ đạo về phòng cháy</td>
+                                            <td>664 Đại lộ Bình Dương, phường Hiệp Thành, thành phố Thủ Dầu Một (ĐT: 0693.509.917; Fax: 0650.3.872.456)</td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -428,7 +392,7 @@
         var select_val = selected_element.val();
         console.log('selected...');
         console.log(select_val);
-    });
+    });  
 
     //----------
     $(function() {
