--- a/pccc/images-gallery.html
+++ b/pccc/images-gallery.html
@@ -32,6 +32,9 @@
 
 </head>
 <body>
+<!--     <div id="left-sticky">
+        <img src="dist/images/sticky1.png" alt="">
+    </div> -->
     <div class="container">
         <div class=" row top-banner">
             <object width="100%" height="100%" align="middle">
@@ -147,96 +150,74 @@
         </div>
 
         <div class="row main-banner">
-            <img src="dist/images/news-and-events-banner.jpg" alt="">
+            <img src="dist/images/image-gallery-banner.jpg" alt="">
         </div>
 
-        <div class="row content-wrapper news-and-events-page">
+        <div class="row content-wrapper images-gallery-page">
             <div class="col-sm-8 main-content">
                 <div class="row">
                     <div class="panel panel-default box">
                         <div class="panel-heading">
-                            <h3 class="panel-title box-header">Tin tức và sự kiện » Hoạt động xây dựng lực lượng</h3>
+                            <h3 class="panel-title box-header">Thư viện ảnh</h3>
                         </div>
                         <div class="panel-body box-content">
-                            <div class="list-item">
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
                                         <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
                                         </a>
                                     </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
                                 </div>
 
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
                                         <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
                                         </a>
                                     </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
                                 </div>
+                            </div>
 
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
                                         <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
                                         </a>
                                     </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
                                 </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
+                                
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
                                         <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
                                         </a>
                                     </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
                                 </div>
+                            </div>
 
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
                                         <a href="">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
                                         </a>
                                     </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
+                                </div>
+                                
+                                <div class="col-sm-12 col-md-6 item">
+                                    <div class="img">
+                                        <a href="">
+                                            <img src="dist/images/image-gallery1.jpg" alt="">
+                                        </a>
                                     </div>
-                                    <div class="read-more">
-                                        <a>Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                    <a href="" class="title">Cảnh sát PC&CC thăm Báo Bình Dương và Đài PTTH Bình Dương</a>
                                 </div>
                             </div>
 
@@ -428,7 +409,7 @@
         var select_val = selected_element.val();
         console.log('selected...');
         console.log(select_val);
-    });
+    });  
 
     //----------
     $(function() {
