--- a/pccc/news-and-events-detail.html
+++ b/pccc/news-and-events-detail.html
@@ -147,10 +147,10 @@
         </div>
 
         <div class="row main-banner">
-            <img src="dist/images/news-and-events-banner.jpg" alt="">
+            <img src="dist/images/banner-gioi-thieu.jpg" alt="">
         </div>
 
-        <div class="row content-wrapper news-and-events-page">
+        <div class="row content-wrapper detail-page">
             <div class="col-sm-8 main-content">
                 <div class="row">
                     <div class="panel panel-default box">
@@ -158,98 +158,35 @@
                             <h3 class="panel-title box-header">Tin tức và sự kiện » Hoạt động xây dựng lực lượng</h3>
                         </div>
                         <div class="panel-body box-content">
-                            <div class="list-item">
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="news-and-events-detail.html">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                            <div class="detail-content">
+                                <h4 class="title">HỘI NGHỊ KÝ KẾT GIAO ƯỚC PHONG TRÀO THI ĐUA “VÌ ANTQ” NĂM 2017 CỦA CỤM THI ĐUA SỐ 10 – BỘ CÔNG AN</h4>
+                                <span class="date">04/03/2017</span>
+                                <p>Ngày 03 tháng 3 năm 2017, tại Cảnh sát PC&CC tỉnh Bình Dương Cụm thi đua số 10 đã tổ chức Hội nghị ký kết giao ước phong trào thi đua “Vì ANTQ” năm 2017 do Cảnh sát PC&CC tỉnh Bình Dương làm Cụm trưởng. Đến dự có các đồng chí thuộc Bộ Công an và Ban Giám đốc, lãnh đạo các đơn vị thuộc Cụm Thi đua số 10 – Bộ Công an.</p>
+                                <div class="img-wrapper">
+                                    <img src="dist/images/hinh1-14.jpg" alt="">
+                                    <em class="img-desc">Toàn cảnh hội nghị.</em> 
                                 </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="news-and-events-detail.html">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
+                                <p>Nhằm thực hiện có hiệu quả Chỉ thị số 1634/CT-TTg ngày 31/8/2010 của Thủ tướng Chính phủ về tăng cường chỉ đạo thực hiện một số nhiệm vụ trọng tâm trong công tác PCCC&CNCH và thực hiện thắng lợi Nghị quyết của Đảng ủy Công an Trung ương, lãnh đạo Bộ Công an, phấn đấu hoàn thành xuất sắc nhiệm vụ chính trị của lực lượng Cảnh sát PC&CC năm 2017, xây dựng lực lượng Cảnh sát PC&CC bản lĩnh, cách mạng, nhân văn vì nhân dân phục vụ. Duy trì, nhân rộng các mô hình, điển hình tiên tiến, phổ biến cách làm hay, hiệu quả của các đơn vị trong tổ chức, chỉ đạo phong trào thi đua “Vì an ninh Tổ quốc”. Tập trung giải quyết có hiệu quả những nhiệm vụ trọng tâm có ý nghĩa đột phá trong năm 2017 với khẩu hiệu hành động “Chủ động, đổi mới, kỷ cương, trách nhiệm, hiệu quả”. Phong trào thi đua “Vì ANTQ” năm 2017 Cụm thi đua số 10 (BCA) đã thảo luận và thống nhất những nội dung cơ bản sau:</p>
+                                <p>Tăng cường công tác tham mưu cấp ủy chính quyền chỉ đạo thực hiện có hiệu quả công tác quản lý nhà nước về PCCC&CNCH trên địa bàn. Nâng cao chất lượng, hiệu quả phong trào toàn dân PCCC, đảm bảo 100% tỉnh, thành phố, quận huyện, thị xã đều có ban chỉ đạo PCCC. Đẩy mạnh công tác tuyên truyền đảm bảo 100% cơ sở thuộc diện quản lý về PCCC và khu dân cư có nguy cơ cháy, nổ cao được tuyên truyền về PCCC. Tổ chức các hoạt động thiết thực hưởng ứng “Tuần lễ quốc qia về an toàn vệ sinh lao động – phòng, chống cháy, nổ” lần thứ 19 và “Ngày toàn dân phòng cháy, chữa cháy 4/10” năm 2017. Nâng cao hiệu lực quản lý nhà nước về PCCC, tăng cường công tác nắm tình hình, công tác thanh tra kiểm tra, kịp thời hướng dẫn cơ sở khắc phục những sơ hở, thiếu sót, chủ động phòng ngừa, hạn chế nguy cơ xảy ra cháy, nổ…</p>
+                                <div class="img-wrapper">
+                                    <img src="dist/images/hinh1-14.jpg" alt="">
+                                    <em class="img-desc">Đại diện các đơn vị thành viên trong Cụm ký kết giao ước thi đua.</em> 
                                 </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="news-and-events-detail.html">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="news-and-events-detail.html">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-
-                                <div class="row item">
-                                    <div class="col-sm-4 left-content">
-                                        <a href="news-and-events-detail.html">
-                                            <img src="dist/images/news-and-events-item.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="col-sm-8 right-content">
-                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI PHỤ NỮ CẢNH SÁT PC&CC TỈNH HỌP MẶT KỶ NIỆM 107 NĂM NGÀY QUỐC TẾ PHỤ NỮ 8/3</h5></a>
-                                        <span class="date">01/01/2016</span>
-                                        <p class="content">Chiều ngày 24/02/2017, Hội phụ nữ Cảnh sát PC&CC tỉnh Bình Dương tổ chức kỷ niệm 107 năm ngày Quốc tế phụ nữ (8/3/1910 – 8/3/2017) và 1977 năm ngày Khởi nghĩa Hai Bà Trưng, chào mừng Đại hội Đại biểu Phụ nữ toàn quốc lần thứ XII. Đến dự buổi lễ kỷ niệm có các đồng chí Đảng ủy – Ban Giám đốc, Đại diện Hội liên hiệp Phụ nữ tỉnh, lãnh đạo các đơn vị trực thuộc Cảnh sát PC&CC tỉnh, cùng toàn thể cán bộ, hội viên phụ nữ Cảnh sát PC&CC tỉnh.</p>
-                                    </div>
-                                    <div class="read-more">
-                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
+                                <p>Tiếp tục tăng cường công tác xây dựng Đảng, xây dựng lực lượng PCCC trong sạch, vững mạnh; gắn với học tập và làm theo tư tưởng, đạo đức, phong cách Hồ Chí Minh và 6 điều Bác Hồ dạy CAND. Đẩy mạnh việc thực hiện Chỉ thị số 03 của Bộ Công an về “Tiếp tục siết chặt kỷ luật, kỷ cương, điều lệnh; xây dựng nếp sống văn hóa vì nhân dân phục vụ”. Triển khai có hiệu quả Chỉ thị số 07 của Bộ trưởng Bộ Công an về “Tăng cường lãnh đạo nâng cao văn hóa ứng xử CAND trong tình hình mới; Cuộc vận động “Xây dựng phong cách người Cảnh sát PC&CC bản lĩnh, nhân văn vì nhân dân phục vụ”… Làm tốt công tác giáo dục chính trị, tư tưởng cho CBCS, siết chặt kỷ cương, kỷ luật, giảm tỷ lệ cán bộ chiến sỹ sai phạm kỷ luật dưới 05% . Làm tốt công tác thi đua, khen thưởng nhân điển hình tiên tiến, động viên kịp thời cán bộ, chiến sỹ hoàn thành xuất sắc mọi nhiệm vụ được giao. Xây dựng hình ảnh người Cảnh sát PC&CC đẹp trong lòng nhân dân./.</p>
+                                <span class="author"> Nguyễn Phụng</span>
                             </div>
-
-                            <div>
-                                <ul class="pagination">
-                                  <li class="disabled"><a href="#">«</a></li>
-                                  <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                                  <li><a href="#">2</a></li>
-                                  <li><a href="#">3</a></li>
-                                  <li><a href="#">4</a></li>
-                                  <li><a href="#">5</a></li>
-                                  <li><a href="#">»</a></li>
-                                </ul>
+                            <div class=related>
+                                <h4 class="title">TIN LIÊN QUAN</h4>
+                                <div class="row related-item">
+                                    <div class="col-xs-12">
+                                        <ul>
+                                            <li><i class="fa fa-circle" aria-hidden="true"></i><a href="">TĂNG CƯỜNG CÔNG TÁC ĐẢM BẢO PHÒNG CHÁY TRONG LỄ HỘI RẰM THÁNG GIÊNG</a></li>
+                                            <li><i class="fa fa-circle" aria-hidden="true"></i><a href="">GIẢI PHÁP THOÁT KHÓI CHỐNG TỤ KHÓI CHO NHÀ VÀ CÔNG TRÌNH</a></li>
+                                            <li><i class="fa fa-circle" aria-hidden="true"></i><a href="">CẢNH SÁT PC&CC TỈNH THAM GIA CHỮA CHÁY TẠI CÔNG TY GỖ THỊ XÃTÂN UYÊN</a></li>
+                                            <li><i class="fa fa-circle" aria-hidden="true"></i><a href="">DIỄN TẬP PHƯƠNG ÁN CHỮA CHÁY VÀ CỨU NẠN, CỨU HỘ TẠI TÒA NHÀ BECAMEX TOWER</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -428,7 +365,7 @@
         var select_val = selected_element.val();
         console.log('selected...');
         console.log(select_val);
-    });
+    }); 
 
     //----------
     $(function() {
@@ -446,7 +383,7 @@
             $('html, body').animate({scrollTop : 0},800);
             return false;
         });
-    });
+    });   
 </script>
 </body>
 </html>
